Initial setup of cards, styles, and metadata. Add handlebars package.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,4 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/* add your global styles here; use tailwind classes for component/element styles */
+a {
+	@apply underline;
+}
+.cards {
+	@apply mb-8;
+}
+
+.card > div {
+	@apply shadow-lg;
+}
