--- a/src/index.hbs
+++ b/src/index.hbs
@@ -24,7 +24,7 @@
 <body class="bg-cfyellow py-8">
 
 	<header class="flex flex-col items-center justify-center pb-8">
-		<div class="lg:w-2/5 text-center">
+		<div class=" w-4/5 lg:w-2/5 text-center">
 			<picture class="pb-8 inline-block">
 				<source srcset="img/card_fork-emblem@2x.png?as=webp&width=1600" width="600" media="(min-width: 1024px)">
 				<img src="img/card_fork-logo.svg" width="200" alt="Card Fork logo containing an circuit-inspired abstract yellow sprocket design.">
@@ -38,14 +38,14 @@
 		</div>
 	</header>
 
-	<main class="container mx-auto px-12 pb-8">
+	<main class="container mx-auto px-2 md:px-4 xl:px-12 pb-8">
 		<h3 class="pl-8 text-2xl inline-block">Prompt Cards</h3>
 		{{!-- TODO: add card style selector? <h3 class="text-2xl text-right pr-8">Style: 🔲 🔲 🔲</h3> --}}
 		<div class="cards flex flex-wrap">
 			{{!-- TODO: add random example card sets at top of page --}}
 			{{#each cards.cards.prompts}}
-				<article class="card prompt w-1/4 my-4 px-8">
-					<div class="p-12 h-96 bg-black text-white text-2xl font-bold rounded-2xl">
+				<article class="card prompt w-1/2 md:w-1/3 2xl:w-1/4 my-1 md:my-2 xl:my-4 px-1 md:px-4 xl:px-8">
+					<div class="p-6 md:p-8 xl:p-12 h-64 md:h-72 lg:h-96 bg-black text-white text-xl xl:text-2xl font-bold rounded-2xl">
 						<div class="card-text">
 							{{this}}&hellip;
 						</div>
@@ -58,8 +58,8 @@
 		<div class="cards flex flex-wrap">
 			{{!-- TODO: add random example card sets at top of page --}}
 			{{#each cards.cards.topics}}
-				<article class="card prompt w-1/4 my-4 px-8">
-					<div class="p-12 h-96 bg-white text-black text-2xl font-bold rounded-2xl">
+				<article class="card topic w-1/2 md:w-1/3 2xl:w-1/4 my-1 md:my-2 xl:my-4 px-1 md:px-4 xl:px-8">
+					<div class="p-6 md:p-8 xl:p-12 h-64 md:h-72 lg:h-96 bg-white text-black text-xl xl:text-2xl font-bold rounded-2xl">
 						<div class="card-text">
 							{{this}}?
 						</div>
