update source link style

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -109,7 +109,7 @@
 									{{/contains}}
 								</div>
 								{{#contains this.source "Hard Fork"}}
-								<div class="episode-link text-sm italic text-gray-600 print:hidden overflow-hidden whitespace-nowrap text-left w-0 group-hover:w-28 transition-all duration-500 ease-in-out">
+								<div class="episode-link text-sm text-gray-500 print:hidden overflow-hidden whitespace-nowrap text-left w-0 group-hover:w-28 transition-all duration-500 ease-in-out">
 									{{#if this.episodeDate}}
 									<a class="date no-underline hover:underline ml-2"
 									   href="{{this.episodeURL}}"
