make instructions full width for now

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -62,7 +62,7 @@
 	</header>
 
 	<main class="container mx-auto px-2 md:px-4 xl:px-12 mb-8">
-		<section id="instructions" class="mb-8 print:w-full w-full md:w-1/2 px-2 md:px-4 xl:px-8 float-left">
+		<section id="instructions" class="mb-8 w-full px-2 md:px-4 xl:px-8 float-left">
 			<h2 class="">Instructions</h2>
 			<p>
 				Shuffle the prompt cards and topic cards separately, and form two decks. Turn over one of each,
